# kokkos-umpire

cmake/: FindTPLUMPIRE.cmake
core/src/: CMakeLists.txt  Kokkos_UmpireSpace.hpp
core/src/impl/: Kokkos_UmpireSpace.cpp
core/unit_tests/: TestUmpireAllocators.hpp
core/unit_tests/cuda/: TestCuda_UmpireMemorySpace.cpp
core/unit_tests/openmp/: TestOpenMP_UmpireMemorySpace.cpp
core/unit_tests/serial/: TestSerial_UmpireMemorySpace.cpp
