
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/../../cmake)

KOKKOS_TPL_OPTION(UMPIRE  Off)
KOKKOS_IMPORT_TPL(UMPIRE)


INSTALL (DIRECTORY
  "${CMAKE_CURRENT_LIST_DIR}/"
  DESTINATION ${KOKKOS_HEADER_DIR}
  FILES_MATCHING PATTERN "*.hpp"
)

APPEND_GLOB(KOKKOS_CORE_SRCS ${CMAKE_CURRENT_LIST_DIR}/impl/*.cpp)
